# sz_rabbit_consumer_rust

./: .dockerignore  CHANGELOG.md  Cargo.toml  DOCKER_NOTES.md  Dockerfile  NEXT_STEPS.md  README.md  STATUS.md  deny.toml
.github/workflows/: ci.yml
src/: config.rs  consumer.rs  lib.rs  main.rs  record.rs
tests/: integration_test.rs
